@@ -4,9 +4,16 @@ AM_CPPFLAGS = -D_FILE_OFFSET_BITS=64
 bin_PROGRAMS = fusermount ulockmgr_server
 noinst_PROGRAMS = mount.fuse
 
-fusermount_SOURCES = fusermount.c
-fusermount_LDADD = ../lib/mount_util.lo
-fusermount_CPPFLAGS = -I../lib
+# we re-use mount_util.c from the library, but do want to keep ourself
+# as stand-alone as possible. in order to make an out-of-source build
+# possible, we "generate" the file from its original location by
+# copying it over.
+fusermount_SOURCES = fusermount.c mount_util.c
+fusermount_CPPFLAGS = -I$(top_srcdir)/lib
+BUILT_SOURCES = mount_util.c
+mount_util.c: $(top_srcdir)/lib/mount_util.c
+	@cp $(top_srcdir)/lib/mount_util.c .
+
 mount_fuse_SOURCES = mount.fuse.c
 
 ulockmgr_server_SOURCES = ulockmgr_server.c
